fix button collision in s2 on mobile, remove console.log()'s

--- a/src/S2/S2.css
+++ b/src/S2/S2.css
@@ -61,7 +61,7 @@ input[type="file"] {
 
 #upload-btn{
     display: flex;
-    margin-top: 65vh;
+    margin-top: 60vh;
     margin-left: auto;
     margin-right: auto;
     width: 123px;
